--- a/landing/templates/landing/restaurant_list.html
+++ b/landing/templates/landing/restaurant_list.html
@@ -7,9 +7,10 @@
     <title>TasteSeat</title>
 </head>
 <body>
-    <h1>Restaurants:::</h1>
-    {% for restaurant in object_list %}
+    <h1>Restaurants</h1>
+    {% for restaurant in Restaurant.object.all %}
     <h2>{{restaurant.name}}</h2>
     <p>{{restaurant.cuisine_type}}</p>
+    {% endfor %}
 </body>
 </html>
