Add form functionality and test fixture to populate the database with Tables for testing

--- a/tasteseat/templates/landing/base.html
+++ b/tasteseat/templates/landing/base.html
@@ -25,9 +25,9 @@
             </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="#" class="nav-link px-2 link-body-emphasis" contenteditable="false"
-                        style="cursor: pointer;">Customers</a></li>
-                <li><a href="#" class="nav-link px-2 link-body-emphasis" contenteditable="false"
-                        style="cursor: pointer;">Products</a></li>
+                        style="cursor: pointer;">Restaurants</a></li>
+                <!-- <li><a href="#" class="nav-link px-2 link-body-emphasis" contenteditable="false"
+                        style="cursor: pointer;">Products</a></li> -->
             </ul>
             <!-- Search Bar -->
             <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
