--- a/tasteseat/templates/landing/base.html
+++ b/tasteseat/templates/landing/base.html
@@ -27,7 +27,7 @@
                 <li><a href="#" class="nav-link px-2 link-body-emphasis" contenteditable="false"
                         style="cursor: pointer;">Restaurants</a></li>
                 <!-- <li><a href="#" class="nav-link px-2 link-body-emphasis" contenteditable="false"
-                        style="cursor: pointer;">Products</a></li> -->
+                        style="cursor: pointer;">Bookings</a></li> -->
             </ul>
             <!-- CODE BELOW ONLY IF ALREADY LOGGED IN -->
             <!-- <div class="dropdown text-end">
@@ -41,13 +41,10 @@
                   <li><a class="dropdown-item" href="#" contenteditable="false" style="cursor: pointer;">Sign out</a></li>
                 </ul>
               </div> -->
-            <!-- Search Bar -->
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-            </form>
+
             <!-- Login & Sign-up -->
             <div class="text-end">
-                <button type="button" class="btn btn-outline-light me-2">Login</button>
+                <button type="button" class="btn btn-outline-dark me-2">Login</button>
                 <button type="button" class="btn btn-warning">Sign-up</button>
             </div>
     </header>
@@ -59,6 +56,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="{% static 'js/scripts.js' %}"></script>
+
 </body>
 
 </html>
