--- a/tasteseat/templates/landing/booking_confirmation.html
+++ b/tasteseat/templates/landing/booking_confirmation.html
@@ -4,10 +4,54 @@
 
 <div class="container mt-5">
     <h2>Booking Confirmation</h2>
+    <br>
+    <!-- <br>
     <p>Thank you for your booking, {{ booking.user_id.username }}!</p>
     <p>Your table is reserved at {{ booking.table_id.at_restaurant.name }} on {{ booking.booking_start_time }} for {{ booking.number_of_guests }} guests.</p>
+    {% if booking.special_requests or booking.food_restrictions %}
     <p>Special Requests: {{ booking.special_requests }}</p>
     <p>Food Restrictions: {{ booking.food_restrictions }}</p>
+    {% endif %} -->
+    <p>
+        {% with booking.booking_start_time as start_time %}
+            {% if start_time %}
+                {% comment %} Extract and Format Booking Time {% endcomment %}
+                {% with start_time|date:"H:i" as time_only %}  <!-- Extract HH:MM format -->
+                    {% with time_only|slice:":2" as hour %}  <!-- Get the hour -->
+                        {% with time_only|slice:"3:" as minute %}  <!-- Get the minute -->
+                            {% if hour == "12" %}
+                                <strong>Your booking is at {{ hour }}:{{ minute }} PM.</strong>
+                            {% elif hour == "00" %}
+                                <strong>Your booking is at 12:{{ minute }} AM.</strong>
+                            {% elif hour|add:"0"|add:"0" >= "13" %}
+                                <strong>Your booking is at {{ hour|add:"-12" }}:{{ minute }} PM.</strong>
+                            {% else %}
+                                <strong>Your booking is at {{ hour }}:{{ minute }} AM.</strong>
+                            {% endif %}
+                        {% endwith %}
+                    {% endwith %}
+                {% endwith %}
+            {% else %}
+                <strong>Booking time is not available. Please try again..</strong>
+            {% endif %}
+        {% endwith %}
+    </p>
+    <p>Restaurant: {{ booking.table_id.at_restaurant.name }}</p>
+    <p>Number of Guests: {{ booking.number_of_guests }}</p> 
+    {% if booking.special_requests or booking.food_restrictions %}
+    <p>Special Requests: {{ booking.special_requests }}</p>
+    <p>Food Restrictions: {{ booking.food_restrictions }}</p>
+    {% endif %}
+    <br>
+    <p>Restaurant's address: {{ booking.table_id.at_restaurant.address }}</p>
+
+    <small>If you have any questions, or would like to add any further information, 
+        feel free to contact the restaurant directly at: {{ booking.table_id.at_restaurant.phone_number }}.
+    </small>
+    <br>
+    <br>
+    <small>Return to the <a href="restaurant_list.html">Home Page</a></small>
+
 </div>
 
 {% endblock %}
