--- a/tasteseat/templates/landing/booking_confirmation.html
+++ b/tasteseat/templates/landing/booking_confirmation.html
@@ -48,6 +48,7 @@
     <small>If you have any questions, or would like to add any further information, 
         feel free to contact the restaurant directly at: {{ booking.table_id.at_restaurant.phone_number }}.
     </small>
+    <small>You can also Change or Cancel your booking.</small>
     <br>
     <br>
     <small>Return to the <a href="restaurant_list.html">Home Page</a></small>
