--- a/tasteseat/templates/landing/base.html
+++ b/tasteseat/templates/landing/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{{ csrf_token }}">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}">
@@ -42,7 +43,7 @@
 
             <!-- Login & Sign-up -->
             <div class="text-end">
-                <button type="button" class="btn btn-outline-dark me-2">My Bookings</button>
+                <button type="button" class="btn btn-outline-dark me-2"><a href="{% url 'my_bookings' %}">My Bookings</a></button>
             </div>
         </div>
     </header>
