Add modal to confirm action of deleting a booking

--- a/tasteseat/templates/landing/restaurant_list.html
+++ b/tasteseat/templates/landing/restaurant_list.html
@@ -3,8 +3,8 @@
 {% load static %}
 <div class="container-fluid search-bar-container">
     <!-- Search Bar -->
-    <form class="search-bar col-4 col-lg-6 mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+    <form class="search-bar col-4 col-lg-12 mb-3 mb-lg-0 me-lg-3" role="search">
+        <input type="search" class="form-control" id="search-input" placeholder="Search for a specific Restaurant" aria-label="Search">
     </form>
 </div>
 <main class="restaurant-list container">
