--- a/landing/static/css/style.css
+++ b/landing/static/css/style.css
@@ -1,24 +1,4 @@
 @import url("https://use.typekit.net/isu1auv.css");
-/* font-family: "acumin-pro", sans-serif;
-font-weight: 400;
-font-style: normal; */
-@import url("https://use.typekit.net/isu1auv.css");
-/* Fira Sans ExtraLight
-font-family: "fira-sans", sans-serif;
-font-weight: 200;
-font-style: normal;
-Fira Sans Regular
-font-family: "fira-sans", sans-serif;
-font-weight: 400;
-font-style: normal; */
-@import url("https://use.typekit.net/isu1auv.css");
-/* font-family: "acumin-pro", sans-serif;
-font-weight: 200;
-font-style: normal;
-font-family: "acumin-pro", sans-serif;
-font-weight: 600;
-font-style: normal; */
-@import url("https://use.typekit.net/isu1auv.css");
 /* 
 font-family: "bio-sans", sans-serif;
 font-weight: 300;
@@ -160,15 +140,14 @@ address {
 /* MODAL */
 
 .modal {
-    display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1000; /* Sit on top */
+    z-index: 1050;  
     left: 0;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scrolling if needed */
-    background-color: rgba(0, 0, 0, 0.5); /* Black with opacity */
+    background-color: rgba(90, 90, 90, 0.5); 
 }
 
 .modal-content {
@@ -179,6 +158,10 @@ address {
     width: 80%; /* Could be more or less, depending on screen size */
     max-width: 500px; /* Maximum width */
     text-align: center;
+}
+
+.modal-backdrop {
+    z-index: 1;
 }
 
 .close-button {
