Add basic style

--- a/tasteseat/templates/landing/restaurant_list.html
+++ b/tasteseat/templates/landing/restaurant_list.html
@@ -4,7 +4,7 @@
 <div class="container-fluid search-bar-container">
     <!-- Search Bar -->
     <form class="search-bar col-4 col-lg-12 mb-3 mb-lg-0 me-lg-3" role="search">
-        <input type="search" class="form-control" id="search-input" placeholder="Search for a specific Restaurant" aria-label="Search">
+        <input type="search" class="form-control" id="search-input" placeholder="Search for a Restaurant" aria-label="Search">
     </form>
 </div>
 <main class="restaurant-list container">
