--- a/landing/static/css/style.css
+++ b/landing/static/css/style.css
@@ -1,13 +1,4 @@
 @import url("https://use.typekit.net/isu1auv.css");
-/* 
-font-family: "bio-sans", sans-serif;
-font-weight: 300;
-font-style: normal; */
-@import url("https://use.typekit.net/isu1auv.css");
-/* New Spirit Bold
-font-family: "new-spirit", serif;
-font-weight: 700;
-font-style: normal; */
 
 body {
     display: flex;
@@ -17,7 +8,6 @@ body {
     font-style: normal;
 }
 
-
 .header {
     display: flex;
     height: 60px;
@@ -25,15 +15,15 @@ body {
 
 a {
     text-decoration: none;
-    color: black;
+    color: rgb(9, 9, 9);
 }
 
 .nav-button {
-    color:rgb(118, 118, 170)
+    color: rgb(118, 118, 170);
 }
 
 .nav-button:hover {
-    color:rgb(44, 44, 132)
+    color: rgb(44, 44, 132);
 }
 
 .logo {
@@ -41,8 +31,8 @@ a {
     font-weight: 700;
     font-style: normal;
     font-size: 40px;
-    margin-right: 30px;
-    margin-left: 10px;
+    margin-right: 5%;
+    margin-left: 1%;
 }
 
 .search-bar-container {
@@ -70,7 +60,7 @@ a {
 }
 
 .search-result-item:hover {
-    background-color: #f0f0f0; /* Highlight on hover */
+    background-color: #f0f0f0;
 }
 
 .resto-img-list {
@@ -79,8 +69,6 @@ a {
     aspect-ratio: 8/5;
     object-fit: cover;
 }
-
-/* .resto-img-details {} */
 
 .resto-name-list {
     margin-top: 10px;
@@ -104,12 +92,10 @@ a {
 
 .resto-img-list {
     margin-right: 15px;
-    /* Space between the image and details */
 }
 
 .restaurant-details h2 {
     margin: 0;
-    /* Remove default margin */
 }
 
 .cuisine-type,
@@ -121,42 +107,40 @@ address {
     margin: 2px;
 }
 
-.btn-primary {  /* Default primary button style */  
+.btn-primary {  
     background-color: rgb(66, 66, 100);  
     border: rgb(66, 66, 100);
     color: white;  
 }  
 
-.btn-secondary {  /* Default secondary button style */  
+.btn-secondary {  
     background-color: lightgray;  
     color: black;  
 }  
 
-#guest-selection .btn-secondary { /* More specific rule for guest buttons */  
+#guest-selection .btn-secondary {  
     background-color: green;  
     color: white;  
 }  
 
-/* MODAL */
-
 .modal {
-    position: fixed; /* Stay in place */
+    position: fixed;  
     z-index: 1050;  
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scrolling if needed */
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
     background-color: rgba(90, 90, 90, 0.5); 
 }
 
 .modal-content {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 15% auto; 
     padding: 20px;
-    border: 1px solid #888; /* Gray border */
-    width: 80%; /* Could be more or less, depending on screen size */
-    max-width: 500px; /* Maximum width */
+    border: 1px solid #888; 
+    width: 80%; 
+    max-width: 500px; 
     text-align: center;
 }
 
@@ -178,7 +162,7 @@ address {
     cursor: pointer;
 }
 
-.btn {
+.modal .btn {
     margin: 5px;
     padding: 10px 15px;
     border: none;
@@ -186,12 +170,29 @@ address {
     cursor: pointer;
 }
 
-.btn-danger {
+.modal .btn-danger {
     background-color: #d9534f;
     color: white;
 }
 
-.btn {
+.modal .btn {
     background-color: #5bc0de;
     color: white;
+}
+
+@media screen and (min-width: 576px) {
+    .search-bar {
+        width: 100%; 
+        margin: 0; 
+    }
+    
+    .header {
+        flex-direction: column; 
+        align-items: flex-start; 
+    }
+
+    .nav {
+        width: 100%; 
+        margin-top: 5px; 
+    }
 }
